2005-02-01  Zoltan Varga  <vargaz@freemail.hu>

	* SocketTest.cs: Mark some tests with [Category ("InetAccess")].

2005-01-08  Nick Drochak  <ndrochak@ieee.org>

	* SocketTest.cs: Ignore test on MS.NET

2004-10-14  Dick Porter  <dick@ximian.com>

	* SocketTest.cs: Test the blocking status of accepted sockets

2004-06-05  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* SocketTest.cs: added test for Select with empty lists. Changed the
	'bogus' address of EndConnect test.

2003-12-30  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* SocketTest.cs: new test for asynchronous connection failure.
	Test by Brad FitzpatrickBrad Fitzpatrick <brad@danga.com>.

2003-08-24  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* TcpListenerTest.cs: added more tests.

2003-07-16  Peter Williams  <peter@newton.cx>

	* TcpListenerTest.cs: Initialize outSock to null to
	prevent an mcs compile error.

2003-07-14  Jerome Laban <jlaban@wanadoo.fr>

	* TcpListenerTest.cs: Forced IPv4 listener test.

2002-11-03  Phillip Pearson  <pp@myelin.co.nz>

	* AllTests.cs: Fixed Lawrence's e-mail address.

2002-05-17  Lawrence Pit <loz@cable.a2000.nl>

	* AllTests.cs: added


