@@ -1,3 +1,8 @@
+2005-02-23  Dick Porter  <dick@ximian.com>
+
+	* UdpClientTest.cs: Added, with UdpClientBroadcastTest from Chris
+	Bacon <chris.bacon@docobo.co.uk>
+
 2005-02-01  Zoltan Varga  <vargaz@freemail.hu>
 
 	* SocketTest.cs: Mark some tests with [Category ("InetAccess")].
